@@ -1,4 +1,4 @@
-CHANGES.txt - 02/26/2001
+CHANGES.txt - 02/28/2001
 ------------------------
 
 CHANGES IN HTMLDOC v1.8.12
@@ -29,8 +29,10 @@ CHANGES IN HTMLDOC v1.8.12
 	- Now default to PDF 1.3 (Acrobat 4.0) output format.
 	- Now output length of PDF streams with the stream
 	  object; this offers a modest reduction in file size.
-	- The HTTP file cache now keeps track of previous files
+	- The HTTP file cache now keeps track of previous URLs
 	  that were downloaded.
+	- The HTTP code now supports redirections (status codes
+	  301 to 303) to alternate URLs.
 	- Limit the height check for table rows to 1/8th of the
 	  page length; this seems to provide fairly consistent
 	  wrapping of tables without leaving huge expanses of
